📝 Update README.md to provide clearer project description and structure ✨ Add new features to the quiz application, including a modal overlay ♻️ Refactor button styles for consistency and improved design ♻️ Refactor HeroSection styles for better responsiveness ♻️ Refactor Quiz component styles to enhance user experience ✅ Add Zustand and Zod dependencies for state management and validation 💡 Improve code readability by adding comments and organizing styles 🔧 Update package.json to include new dependencies and ensure compatibility

--- a/src/components/Button/styles.module.css
+++ b/src/components/Button/styles.module.css
@@ -1,11 +1,10 @@
 .button {
-  width: auto;
-  height: auto;
+  width: 156px;
+  height: 45px;
   padding: 10px 20px;
-  background-color: #8a2c2c;
+  background: #7E0707;
   color: #ffffff;
   border: none;
-  border-radius: 5px;
   cursor: pointer;
   transition: background-color 0.3s ease-in-out, transform 0.2s;
 }
