--- a/src/components/Quiz/styles.module.css
+++ b/src/components/Quiz/styles.module.css
@@ -1,22 +1,51 @@
-.quiz__options-container {
-  position: relative;
+.quiz__overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
   display: flex;
+  justify-content: center;
   align-items: center;
+  z-index: 1000;
+  transition: opacity 0.5s ease;
+}
+
+.quiz__question {
+  background-color: #E8EFE9;
+  padding: 20px;
+  border-radius: 8px;
+  /* width: 80%; */
+  max-width: 600px;
+  text-align: center;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 30px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease;
+
+  
+  & h2 {
+    font-size: 28px;
+    font-weight: 400;
+    line-height: 40px;
+    letter-spacing: -0.03em;
+    color: #0B3B3C;
+  }
 }
 
 .quiz__options {
+  margin-top: 20px;
+  text-align: center;
   display: flex;
-  justify-content: center;
-  gap: 10px;
   flex-wrap: wrap;
-}
+  gap: 10px;
+  justify-content: center;
 
-.quiz__options--horizontal {
-  overflow-x: scroll;
-  flex-wrap: nowrap;
-  scroll-behavior: smooth;
-  max-width: 100%;
-  padding: 0 20px;
+  @media(max-width: 768px) {
+  }
+
 }
 
 .quiz__option {
@@ -24,43 +53,55 @@
   padding: 10px;
   border-radius: 5px;
   transition: background-color 0.3s ease-in-out, transform 0.2s;
-  min-width: 150px;
+
+  @media(max-width: 768px) {
+    & img{
+      width: 80px;
+      height: 80px;
+    }
+  }
+}
+
+.quiz__option:hover {
+  background-color: #cbded5;
+  transform: scale(1.05);
 }
 
 .quiz__option--selected {
-  background-color: #E8EFE9;
+  background-color:#cbded5;
   color: white;
-  border: 2px solid #E8EFE9;
+  border: 2px solid #cbded5;
 }
 
-.quiz__option-image {
-  max-width: 100px;
-  height: auto;
+.quiz__navigation {
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+  gap: 10px;
 }
 
-.scroll-btn {
-  background-color: transparent;
-  border: none;
-  font-size: 24px;
-  cursor: pointer;
-  position: absolute;
+.modal {
+  position: fixed;
   top: 50%;
-  transform: translateY(-50%);
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #E8EFE9;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  z-index: 1100;
+  width: 80%;
+  max-width: 500px;
+  text-align: center;
+  transition: opacity 0.5s ease, transform 0.3s ease;
 }
 
-.scroll-btn:first-of-type {
-  left: 10px;
-}
-
-.scroll-btn:last-of-type {
-  right: 10px;
-}
-
-@media (max-width: 768px) {
-  .quiz__options {
-    gap: 10px;
-  }
-  .quiz__option {
-    min-width: 120px;
-  }
+.modal-backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 1050;
 }
